updating the index.html to resolve conflicts in Deploy

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </div>
                 
                 <div class="container__informacoes">
-                    <img id="imgTrofeu" src="/numero-secreto-js/img/trophy.png" alt="ícone de um troféu" />
+                    <img id="imgTrofeu" src="/numero-secreto-js/img/trophy.png" alt="icone de um trofeu" />
                 </div>
             </div>
-            <img src="/numero-secreto-js/img/robot.gif" alt="robô mergulhador" class="container__imagem-robo" />
+            <img src="/numero-secreto-js/img/robot.gif" alt="robot" class="container__imagem-robo" />
 
         </div>
     </div>
