corrigindo conflitos no html e script.js para o deploy

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
         </div>
     </div>
-    <script src="/numero-secreto-js/js/app.js" defer></script>
-    <audio id="audioErrou" src="/numero-secreto-js/audio/errou.wav"></audio>
-    <audio id="audioGameOver" src="/numero-secreto-js/audio/game-over.wav"></audio>
-    <audio id="audioAhMizeravi" src="/numero-secreto-js/audio/ah-mizeravi.wav"></audio>
+    <script src="./js/app.js" defer></script>
+    <audio id="audioErrou" src="./audio/errou.wav"></audio>
+    <audio id="audioGameOver" src="./audio/game-over.wav"></audio>
+    <audio id="audioAhMizeravi" src="./audio/ah-mizeravi.wav"></audio>
 
 </body>
 
